# auto_google_form_agent

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
src/agents/: google_form_crew.py
src/agents/tools/: vision_question_analyzer.py
src/cli/: main.py
src/config/: project_paths.py
src/config/prompts/: en.yaml  pl.yaml
src/parsers/: google_form_parser.py
src/utils/: fs_utils.py  image_utils.py  json_utils.py  print_styles.py  string_utils.py  yaml_utils.py
tests/utils/: test_print_styles.py
utils/: print_styles.py
