[project]
name = "autogforms-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "crewai>=0.121.0",
    "playwright>=1.52.0",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
